--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1402,6 +1402,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -5099,7 +5102,6 @@ EncoderInertialCapture</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
                                                             <widget class="GtkHBox" id="hbox17">
-                                                            <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">10</property>
                                                             <child>
@@ -10857,11 +10859,10 @@ after time</property>
                                                             <property name="border_width">8</property>
                                                             <property name="spacing">10</property>
                                                             <child>
-                                                            <widget class="GtkHBox" id="hbox207">
+                                                            <widget class="GtkHPaned" id="hpaned_force_capture">
                                                             <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="spacing">20</property>
-                                                            <property name="homogeneous">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="position">400</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox110">
                                                             <property name="visible">True</property>
@@ -11047,23 +11048,8 @@ after time</property>
                                                             </child>
                                                             </widget>
                                                             <packing>
-                                                            <property name="expand">True</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="position">0</property>
-                                                            </packing>
-                                                            </child>
-                                                            <child>
-                                                            <widget class="GtkVScale" id="vscale_force_sensor">
-                                                            <property name="sensitive">False</property>
-                                                            <property name="can_focus">True</property>
-                                                            <property name="adjustment">0 -100 100 1 10 10</property>
-                                                            <property name="inverted">True</property>
-                                                            <property name="draw_value">False</property>
-                                                            </widget>
-                                                            <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="fill">False</property>
-                                                            <property name="position">1</property>
+                                                            <property name="resize">True</property>
+                                                            <property name="shrink">False</property>
                                                             </packing>
                                                             </child>
                                                             <child>
@@ -11159,9 +11145,8 @@ after time</property>
                                                             </child>
                                                             </widget>
                                                             <packing>
-                                                            <property name="expand">True</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="position">2</property>
+                                                            <property name="resize">True</property>
+                                                            <property name="shrink">False</property>
                                                             </packing>
                                                             </child>
                                                             </widget>
@@ -20858,6 +20843,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
