Force sensor better sensitivity on buttons

--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1408,6 +1408,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -4602,7 +4605,7 @@ EncoderInertialCapture</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="top_padding">8</property>
                                                             <child>
-                                                            <widget class="GtkHBox" id="hbox152">
+                                                            <widget class="GtkHBox" id="hbox_force_buttons">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">30</property>
@@ -20842,6 +20845,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
